fix tooltip alignment when sidebar is expanded and bottom item exists

--- a/src/main/webapp/app/core/course/shared/course-sidebar/course-sidebar.component.scss
+++ b/src/main/webapp/app/core/course/shared/course-sidebar/course-sidebar.component.scss
@@ -178,15 +178,7 @@ a:not(.btn):not(.tab-link):hover {
         display: none; /* Hide the sidebar when printing */
     }
 }
-.custom-tooltip-class .ngb-tooltip-window {
-    position: absolute !important;
-    top: -79px !important; /* Adjust vertical positioning */
-    left: 500px !important; /* Adjust horizontal positioning */
-    transform: translate(0, 0) !important; /* Override any existing transforms */
-    z-index: 1050 !important; /* Ensure it's above other content */
-}
-
-.custom-tooltip-class .ngb-tooltip-arrow {
-    left: 50% !important;
-    transform: translateX(-50%) !important; /* Center the arrow */
+::ng-deep .double-arrow-tooltip {
+    left: 2rem !important;
+    margin-bottom: 0.25rem !important;
 }
